Added Lucene index admin tools